<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/home_margin_start"
        android:paddingTop="@dimen/home_margin_top"
        android:paddingBottom="@dimen/home_margin_top"
        android:paddingEnd="@dimen/home_margin_end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/row_title_text_size"
                android:fontFamily="@font/quicksand"/>

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_5dp"
                android:textSize="@dimen/row_text_size"
                android:fontFamily="@font/quicksand"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_count_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects_21"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:fontFamily="@font/quicksand"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:fontFamily="@font/quicksand"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:fontFamily="@font/quicksand"/>

            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_view_height"
            android:background="@color/line_gray"/>
</LinearLayout>