<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/home_margin_start"
        android:paddingTop="@dimen/home_margin_end"
        android:paddingBottom="@dimen/home_margin_end"
        android:paddingEnd="@dimen/home_margin_end">

        <LinearLayout
            android:id="@+id/ll_image"
            android:layout_width="@dimen/row_image_width_height"
            android:layout_height="@dimen/row_image_width_height"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:padding="@dimen/row_image_padding"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/row_image_padding">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv1"
                    android:layout_width="@dimen/app_bar_width_height"
                    android:layout_height="@dimen/app_bar_width_height"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
                    android:layout_marginEnd="@dimen/row_image_padding" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv2"
                    android:layout_width="@dimen/app_bar_width_height"
                    android:layout_height="@dimen/app_bar_width_height"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/siv3"
                    android:layout_width="@dimen/app_bar_width_height"
                    android:layout_height="@dimen/app_bar_width_height"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
                    android:layout_marginEnd="@dimen/row_image_padding"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/tv_image_count"
                    android:layout_width="@dimen/app_bar_width_height"
                    android:layout_height="@dimen/app_bar_width_height"
                    android:fontFamily="@font/quicksand"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:background="@drawable/round_corner"
                    android:visibility="visible"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@id/iv_more"
            android:layout_toEndOf="@id/ll_image"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5dp"
            android:layout_marginEnd="@dimen/_5dp">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="@dimen/row_title_text_size"
                android:fontFamily="@font/quicksand"/>

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/_5dp"
                android:textSize="@dimen/row_text_size"
                android:fontFamily="@font/quicksand"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_count_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects_21"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:fontFamily="@font/quicksand"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hyphen"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:paddingStart="@dimen/_5dp"
                    android:paddingEnd="@dimen/_5dp"
                    android:fontFamily="@font/quicksand"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/row_text_size"
                    android:fontFamily="@font/quicksand"/>

            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_view_height"
            android:background="@color/line_gray"/>
</LinearLayout>