<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/home_margin_start"
        android:layout_marginEnd="@dimen/home_margin_end"
        android:layout_marginTop="@dimen/home_margin_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects"
            android:textColor="@android:color/white"
            android:textSize="@dimen/projects_text_size"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects_21"
            android:textColor="@color/gray"
            android:textSize="@dimen/home_text_size"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_recently_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/recently_updated_margin_top"
            android:paddingTop="@dimen/recently_updated_padding"
            android:paddingBottom="@dimen/recently_updated_padding"
            android:layout_marginStart="@dimen/home_margin_start"
            android:layout_marginEnd="@dimen/home_margin_end">

            <TextView
                android:id="@+id/tv_recently_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recently_updated"
                android:textColor="@color/gray"
                android:textSize="@dimen/home_text_size"
                android:fontFamily="@font/quicksand"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_down"
                android:layout_toEndOf="@id/tv_recently_updated"
                android:layout_marginStart="@dimen/_5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_list"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_view_height"
            android:background="@color/line_gray"/>
    </LinearLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/recently_updated_margin_top"
                        android:paddingTop="@dimen/recently_updated_padding"
                        android:paddingBottom="@dimen/recently_updated_padding"
                        android:layout_marginStart="@dimen/home_margin_start"
                        android:layout_marginEnd="@dimen/home_margin_end">

                        <View
                            android:layout_width="150dp"
                            android:layout_height="9dp"
                            android:textColor="@color/line_gray"
                            android:background="@color/line_gray"
                            android:layout_marginTop="@dimen/_5dp"
                            android:layout_marginBottom="@dimen/_5dp"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/line_view_height"
                        android:background="@color/line_gray"/>
                </LinearLayout>


                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>

                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
                <include layout="@layout/row_placeholder_layout"/>
            </LinearLayout>
        </ScrollView>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        tools:listitem="@layout/row_layout"
        android:visibility="gone"/>
</LinearLayout>